<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>casadi_vendor</name>
  <version>0.1.0</version>
  <description>
    Wrapper around casadi, providing  an ExternalProject build of casadi.
  </description>

  <maintainer email="sisahawork@gmail.com">Siddharth Saha</maintainer>
  
  <license>Apache License 2.0</license>  <!-- the contents of this package are Apache 2.0 -->
  <license>LGPL-3.0</license>  <!-- casadi is LGPL-3.0 -->
  <url type="website">https://web.casadi.org/</url>
  <author email="sisahawork@gmail.com">Siddharth Saha</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>

  <depend>gcc-static</depend>
  <depend>g++-static</depend>
  <depend>gfortran</depend>
  <depend>liblapack-dev</depend>
  <depend>pkg-config</depend>
  <depend>coinor-libipopt-dev</depend>
  <!-- <depend>qpoases_vendor</depend> -->
  <depend>osqp_vendor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>